tests/e2e/function_call_invalid_path.error
Error: syntax error in story at line 1, column 1

1|    a.b (key: 2)
      ^^^

E0049: Functions can only be called by name
